--- a/index.html
+++ b/index.html
@@ -1,135 +1,121 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Buburuza mea, Cosmina ❤️</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #FFC0CB;
-      font-family: 'Arial', sans-serif;
-      overflow-x: hidden;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    h1 {
-      color: #fff;
-      text-shadow: 2px 2px #ff69b4;
-      text-align: center;
-      font-size: 28px;
-      margin-top: 20px;
-    }
-
-    .photo-container {
-      position: relative;
-      width: 80%;
-      max-width: 300px;
-      margin-top: 20px;
-    }
-
-    .animated-photo {
-      width: 100%;
-      height: auto;
-      border-radius: 20px;
-      animation: float 3s ease-in-out infinite, pulse 2s infinite;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-    }
-
-    @keyframes float {
-      0% { transform: translateY(0px); }
-      50% { transform: translateY(-20px); }
-      100% { transform: translateY(0px); }
-    }
-
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.05); }
-      100% { transform: scale(1); }
-    }
-
-    .heart {
-      position: absolute;
-      color: #ff0000;
-      font-size: 24px;
-      animation: rise 4s linear infinite;
-    }
-
-    @keyframes rise {
-      0% { transform: translateY(0) scale(1); opacity: 1; }
-      100% { transform: translateY(-300px) scale(1.5); opacity: 0; }
-    }
-
-    #messages-container {
-      position: absolute;
-      top: 20%;
-      left: 50%;
-      transform: translateX(-50%);
-      text-align: center;
-      color: #fff;
-      font-size: 20px;
-      max-width: 90%;
-      pointer-events: none;
-      min-height: 60px;
-    }
-
-    #quiz-container {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 90%;
-      text-align:center;
-      z-index: 100;
-    }
-
-    #quiz-container button {
-      padding: 12px 25px;
-      margin: 10px;
-      font-size: 18px;
-      border-radius: 15px;
-      border: none;
-      cursor: pointer;
-      background: #fff;
-      color: #ff69b4;
-      font-weight: bold;
-      transition: transform 0.2s, background 0.3s;
-    }
-
-    #quiz-container button:hover {
-      transform: scale(1.1);
-      background: #ffe6f0;
-    }
-
-    .particle {
-      position: absolute;
-      font-size: 18px;
-      animation: particleRise 2s linear forwards;
-    }
-
-    @keyframes particleRise {
-      0% { transform: translateY(0) scale(1); opacity: 1; }
-      100% { transform: translateY(-150px) scale(1.5); opacity: 0; }
-    }
-
-    #secret-container {
-      text-align: center;
-      margin-top: 20px;
-      display: none;
-    }
-
-    @keyframes shake {
-      0% { transform: translate(0px,0px); }
-      25% { transform: translate(5px,0px); }
-      50% { transform: translate(-5px,0px); }
-      75% { transform: translate(5px,0px); }
-      100% { transform: translate(0px,0px); }
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Buburuza mea, Cosmina ❤️</title>
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    background: #FFC0CB;
+    font-family: 'Arial', sans-serif;
+    overflow-x: hidden;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+  }
+  h1 {
+    color: #fff;
+    text-shadow: 2px 2px #ff69b4;
+    text-align: center;
+    font-size: 28px;
+    margin-top: 20px;
+  }
+  .photo-container {
+    position: relative;
+    width: 80%;
+    max-width: 300px;
+    margin-top: 20px;
+  }
+  .animated-photo {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+    animation: float 3s ease-in-out infinite, pulse 2s infinite;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+  }
+  @keyframes float {
+    0% { transform: translateY(0px); }
+    50% { transform: translateY(-20px); }
+    100% { transform: translateY(0px); }
+  }
+  @keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.05); }
+    100% { transform: scale(1); }
+  }
+  .heart {
+    position: absolute;
+    color: #ff0000;
+    font-size: 24px;
+    animation: rise 4s linear infinite;
+  }
+  @keyframes rise {
+    0% { transform: translateY(0) scale(1); opacity: 1; }
+    100% { transform: translateY(-300px) scale(1.5); opacity: 0; }
+  }
+  #messages-container {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    color: #fff;
+    font-size: 20px;
+    max-width: 90%;
+    pointer-events: none;
+    min-height: 60px;
+  }
+  #quiz-container {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
+    text-align:center;
+    z-index: 100;
+  }
+  #quiz-container button {
+    padding: 12px 25px;
+    margin: 10px;
+    font-size: 18px;
+    border-radius: 15px;
+    border: none;
+    cursor: pointer;
+    background: #fff;
+    color: #ff69b4;
+    font-weight: bold;
+    transition: transform 0.2s, background 0.3s;
+  }
+  #quiz-container button:hover {
+    transform: scale(1.1);
+    background: #ffe6f0;
+  }
+  .particle {
+    position: absolute;
+    font-size: 18px;
+    animation: particleRise 2s linear forwards;
+  }
+  @keyframes particleRise {
+    0% { transform: translateY(0) scale(1); opacity: 1; }
+    100% { transform: translateY(-150px) scale(1.5); opacity: 0; }
+  }
+  #secret-container {
+    text-align: center;
+    margin-top: 20px;
+    display: none;
+  }
+  @keyframes shake {
+    0% { transform: translate(0px,0px); }
+    25% { transform: translate(5px,0px); }
+    50% { transform: translate(-5px,0px); }
+    75% { transform: translate(5px,0px); }
+    100% { transform: translate(0px,0px); }
+  }
+</style>
 </head>
 <body>
 
@@ -156,7 +142,6 @@
   <div id="secret-message" style="margin-top:20px; font-size:22px; color:#fff;"></div>
 </div>
 
-<!-- Muzică de fundal -->
 <div id="music-controls" style="position: fixed; top: 10px; right: 10px; z-index: 100;">
   <button id="music-btn" style="padding:10px 15px; border:none; border-radius:10px; background:#fff; color:#ff69b4; font-weight:bold; cursor:pointer;">
     🔊 Play Muzică
@@ -168,199 +153,184 @@
 </div>
 
 <script>
-  // Inimioare animate
-  const container = document.querySelector('.photo-container');
-  function createHeart() {
-    const heart = document.createElement('div');
-    heart.classList.add('heart');
-    heart.style.left = Math.random() * 80 + '%';
-    heart.style.fontSize = (20 + Math.random() * 20) + 'px';
-    heart.style.animationDuration = (3 + Math.random() * 3) + 's';
-    heart.textContent = '❤️';
-    container.appendChild(heart);
-    setTimeout(() => heart.remove(), 6000);
+const container = document.querySelector('.photo-container');
+function createHeart() {
+  const heart = document.createElement('div');
+  heart.classList.add('heart');
+  heart.style.left = Math.random() * 80 + '%';
+  heart.style.fontSize = (20 + Math.random() * 20) + 'px';
+  heart.style.animationDuration = (3 + Math.random() * 3) + 's';
+  heart.textContent = '❤️';
+  container.appendChild(heart);
+  setTimeout(() => heart.remove(), 6000);
+}
+setInterval(createHeart, 500);
+
+const messages = [
+  "Îți aduci aminte când am mers prima dată la mare împreună? 🌊",
+  "Îmi place cum râzi și cum îmi luminezi zilele 😍",
+  "Buburuza mea, fiecare zi cu tine e magică ✨",
+  "Abia aștept să sărbătorim astăzi împreună ❤️"
+];
+const msgContainer = document.getElementById("messages-container");
+let msgIndex = 0;
+function showMessage() {
+  if(msgIndex < messages.length) {
+    const msg = document.createElement("div");
+    msg.textContent = messages[msgIndex];
+    msg.style.opacity = 0;
+    msg.style.transition = "opacity 1s";
+    msgContainer.appendChild(msg);
+    setTimeout(() => { msg.style.opacity = 1; }, 100);
+    setTimeout(() => { msg.style.opacity = 0; }, 3500);
+    msgIndex++;
+    setTimeout(showMessage, 4000);
   }
-  setInterval(createHeart, 500);
+}
+setTimeout(showMessage, 2000);
 
-  // Mesaje romantice
-  const messages = [
-    "Îți aduci aminte când am mers prima dată la mare împreună? 🌊",
-    "Îmi place cum râzi și cum îmi luminezi zilele 😍",
-    "Buburuza mea, fiecare zi cu tine e magică ✨",
-    "Abia aștept să sărbătorim astăzi împreună ❤️"
-  ];
-  const msgContainer = document.getElementById("messages-container");
-  let msgIndex = 0;
-  function showMessage() {
-    if(msgIndex < messages.length) {
-      const msg = document.createElement("div");
-      msg.textContent = messages[msgIndex];
-      msg.style.opacity = 0;
-      msg.style.transition = "opacity 1s";
-      msgContainer.appendChild(msg);
-      setTimeout(() => { msg.style.opacity = 1; }, 100);
-      setTimeout(() => { msg.style.opacity = 0; }, 3500);
-      msgIndex++;
-      setTimeout(showMessage, 4000);
-    }
+const btnLeft = document.getElementById("btn-left");
+const btnRight = document.getElementById("btn-right");
+const answerDiv = document.getElementById("answer");
+const questionDiv = document.getElementById("question");
+
+const quizData = [
+  { question: "Simți că sunt tot pentru tine? 💖", left: "Da, mereu și pentru totdeauna! 😍", right: "Nu, dar totuși ești specială 😘" },
+  { question: "Vrei să mai facem amintiri împreună?", left: "Da, să fie aventuri magice! ✨", right: "Nu, dar abia aștept să râdem împreună 😄" },
+  { question: "Mă vezi alături de tine mereu?", left: "Da, mereu! ❤️", right: "Nu, dar tot te iubesc 😘" }
+];
+
+let currentIndex = 0;
+function showQuestion(index) {
+  const q = quizData[index];
+  questionDiv.textContent = q.question;
+  answerDiv.style.opacity = 0;
+  answerDiv.textContent = "";
+}
+
+function createParticles(num=10) {
+  for(let i=0; i<num; i++){
+    const p = document.createElement("div");
+    p.className = "particle";
+    p.style.left = Math.random()*80 + "%";
+    p.style.top = "90%";
+    p.style.fontSize = (10+Math.random()*25)+"px";
+    p.style.color = ["#ff69b4","#ff1493","#fff0f5","#ffb6c1","#ff0000","#ffd700"][Math.floor(Math.random()*6)];
+    p.textContent = ["❤️","💖","✨","🌸","🎉"][Math.floor(Math.random()*5)];
+    document.body.appendChild(p);
+    const fallDuration = 2000 + Math.random()*2000;
+    p.animate([
+      { transform: `translateY(0px) rotate(0deg)` },
+      { transform: `translateY(-150px) rotate(${Math.random()*720}deg)` }
+    ], { duration: fallDuration, iterations: 1, easing: 'ease-out' });
+    setTimeout(()=>p.remove(),fallDuration);
   }
-  setTimeout(showMessage, 2000);
+}
 
-  // Mini-joc interactiv
-  const btnLeft = document.getElementById("btn-left");
-  const btnRight = document.getElementById("btn-right");
-  const answerDiv = document.getElementById("answer");
-  const questionDiv = document.getElementById("question");
+function handleClick(isLeft) {
+  const q = quizData[currentIndex];
+  const text = isLeft ? q.left : q.right;
+  const btn = isLeft ? btnLeft : btnRight;
 
-  const quizData = [
-    { question: "Simți că sunt tot pentru tine? 💖", left: "Da, mereu și pentru totdeauna! 😍", right: "Nu, dar totuși ești specială 😘" },
-    { question: "Vrei să mai facem amintiri împreună?", left: "Da, să fie aventuri magice! ✨", right: "Nu, dar abia aștept să râdem împreună 😄" },
-    { question: "Mă vezi alături de tine mereu?", left: "Da, mereu! ❤️", right: "Nu, dar tot te iubesc 😘" }
-  ];
-
-  let currentIndex = 0;
-
-  function showQuestion(index) {
-    const q = quizData[index];
-    questionDiv.textContent = q.question;
-    answerDiv.style.opacity = 0;
-    answerDiv.textContent = "";
-  }
-
-  function createParticles() {
-    for(let i=0; i<10; i++){
-      const p = document.createElement("div");
-      p.className = "particle";
-      p.style.left = Math.random()*80 + "%";
-      p.style.top = "90%";
-      p.textContent = "❤️";
-      document.body.appendChild(p);
-      setTimeout(()=>p.remove(),2000);
-    }
-  }
-
-  function handleClick(isLeft) {
-    const q = quizData[currentIndex];
-    const text = isLeft ? q.left : q.right;
-    const btn = isLeft ? btnLeft : btnRight;
-
-    // 30% șansă ca butonul opus să fugă
-    if(Math.random() < 0.3){
-      const moveBtn = isLeft ? btnRight : btnLeft;
-      moveBtn.style.transform = `translate(${Math.random()*50 - 25}px, ${Math.random()*30 - 15}px)`;
-      setTimeout(()=>moveBtn.style.transform="translate(0,0)",500);
-      // shake ecran
-      document.body.style.animation = "shake 0.3s";
-      document.body.addEventListener("animationend", ()=> document.body.style.animation="");
-    }
-
-    // efect puls buton apăsat
-    btn.style.transform = "scale(1.2)";
-    setTimeout(() => { btn.style.transform = "scale(1)"; }, 200);
-
-    // vibratie telefon
-    if (navigator.vibrate) navigator.vibrate(100);
-
-    // sunet click
-    const audioClick = new Audio('click.mp3');
-    audioClick.play().catch(()=>{});
-
-    // afișare răspuns
-    answerDiv.style.opacity = 0;
-    answerDiv.textContent = text;
-    setTimeout(() => { answerDiv.style.opacity = 1; }, 50);
-
-    createParticles();
-    nextQuestion();
+  if(Math.random() < 0.3){
+    const moveBtn = isLeft ? btnRight : btnLeft;
+    moveBtn.style.transform = `translate(${Math.random()*50 - 25}px, ${Math.random()*30 - 15}px)`;
+    setTimeout(()=>moveBtn.style.transform="translate(0,0)",500);
+    document.body.style.animation = "shake 0.3s";
+    document.body.addEventListener("animationend", ()=> document.body.style.animation="");
   }
 
-  btnLeft.addEventListener("click", () => handleClick(true));
-  btnRight.addEventListener("click", () => handleClick(false));
+  btn.style.transform = "scale(1.2)";
+  setTimeout(() => { btn.style.transform = "scale(1)"; }, 200);
+  if (navigator.vibrate) navigator.vibrate(100);
 
-  // Secret surprise cu confetti
-  const secretContainer = document.getElementById("secret-container");
-  const secretBtn = document.getElementById("secret-btn");
-  const secretMessage = document.getElementById("secret-message");
+  const audioClick = new Audio('click.mp3');
+  audioClick.play().catch(()=>{});
 
-  function showSecret() {
-    secretMessage.textContent = "Te iubesc infinit, Cosmina! 💖 Tu ești totul pentru mine!";
-    secretBtn.style.display = "none";
+  answerDiv.style.opacity = 0;
+  answerDiv.textContent = text;
+  setTimeout(() => { answerDiv.style.opacity = 1; }, 50);
 
-    for(let i=0;i<100;i++){
-      const confetti = document.createElement("div");
-      confetti.className = "particle";
-      confetti.style.left = Math.random()*100 + "%";
-      confetti.style.top = "-10%";
-      confetti.style.fontSize = (10+Math.random()*25)+"px";
-      confetti.style.color = ["#ff69b4","#ff1493","#fff0f5","#ffb6c1","#ff0000","#ffd700"][Math.floor(Math.random()*6)];
-      confetti.textContent = ["❤️","💖","✨","🌸","🎉"][Math.floor(Math.random()*5)];
-      document.body.appendChild(confetti);
+  createParticles();
+  nextQuestion();
+}
 
-      const fallDuration = 3000 + Math.random()*2000;
-      confetti.animate([
-        { transform: `translateY(0px) rotate(0deg)` },
-        { transform: `translateY(100vh) rotate(${Math.random()*720}deg)` }
-      ], {
-        duration: fallDuration,
-        iterations: 1,
-        easing: 'ease-out'
-      });
+btnLeft.addEventListener("click", () => handleClick(true));
+btnRight.addEventListener("click", () => handleClick(false));
 
-      setTimeout(()=>confetti.remove(), fallDuration);
-    }
+const secretContainer = document.getElementById("secret-container");
+const secretBtn = document.getElementById("secret-btn");
+const secretMessage = document.getElementById("secret-message");
 
-    const bigHeart = document.createElement("div");
-    bigHeart.textContent = "❤️";
-    bigHeart.style.position = "fixed";
-    bigHeart.style.left = "50%";
-    bigHeart.style.top = "50%";
-    bigHeart.style.transform = "translate(-50%, -50%) scale(0)";
-    bigHeart.style.fontSize = "120px";
-    bigHeart.style.color = "#ff0000";
-    bigHeart.style.transition = "transform 1s";
-    document.body.appendChild(bigHeart);
-    setTimeout(()=>bigHeart.style.transform="translate(-50%, -50%) scale(1)",50);
-    setTimeout(()=>bigHeart.remove(),4000);
+function showSecret() {
+  secretMessage.textContent = "Te iubesc infinit, Cosmina! 💖 Tu ești totul pentru mine!";
+  secretBtn.style.display = "none";
+
+  for(let i=0;i<150;i++){
+    const confetti = document.createElement("div");
+    confetti.className = "particle";
+    confetti.style.left = Math.random()*100 + "%";
+    confetti.style.top = "-10%";
+    confetti.style.fontSize = (10+Math.random()*30)+"px";
+    confetti.style.color = ["#ff69b4","#ff1493","#fff0f5","#ffb6c1","#ff0000","#ffd700"][Math.floor(Math.random()*6)];
+    confetti.textContent = ["❤️","💖","✨","🌸","🎉","💘"][Math.floor(Math.random()*6)];
+    document.body.appendChild(confetti);
+    const fallDuration = 3000 + Math.random()*3000;
+    confetti.animate([
+      { transform: `translateY(0px) rotate(0deg)` },
+      { transform: `translateY(100vh) rotate(${Math.random()*720}deg)` }
+    ], { duration: fallDuration, iterations: 1, easing: 'ease-out' });
+    setTimeout(()=>confetti.remove(),fallDuration);
   }
 
-  secretBtn.addEventListener("click", showSecret);
+  const bigHeart = document.createElement("div");
+  bigHeart.textContent = "❤️";
+  bigHeart.style.position = "fixed";
+  bigHeart.style.left = "50%";
+  bigHeart.style.top = "50%";
+  bigHeart.style.transform = "translate(-50%, -50%) scale(0)";
+  bigHeart.style.fontSize = "120px";
+  bigHeart.style.color = "#ff0000";
+  bigHeart.style.transition = "transform 1s";
+  document.body.appendChild(bigHeart);
+  setTimeout(()=>bigHeart.style.transform="translate(-50%, -50%) scale(1)",50);
+  setTimeout(()=>bigHeart.remove(),4000);
+}
 
-  function nextQuestion() {
-    currentIndex++;
-    if(currentIndex < quizData.length) {
-      setTimeout(() => showQuestion(currentIndex), 2000);
-    } else {
-      setTimeout(() => {
-        questionDiv.textContent = "Mulțumesc că ești în viața mea ❤️";
-        answerDiv.textContent = "";
-        btnLeft.style.display = "none";
-        btnRight.style.display = "none";
-        secretContainer.style.display = "block";
-      }, 2500);
-    }
+secretBtn.addEventListener("click", showSecret);
+
+function nextQuestion() {
+  currentIndex++;
+  if(currentIndex < quizData.length) {
+    setTimeout(() => showQuestion(currentIndex), 2000);
+  } else {
+    setTimeout(() => {
+      questionDiv.textContent = "Mulțumesc că ești în viața mea ❤️";
+      answerDiv.textContent = "";
+      btnLeft.style.display = "none";
+      btnRight.style.display = "none";
+      secretContainer.style.display = "block";
+    }, 2500);
   }
+}
 
-  showQuestion(currentIndex);
+showQuestion(currentIndex);
 
-  // Muzică
-  const music = document.getElementById("bg-music");
-  const musicBtn = document.getElementById("music-btn");
+const music = document.getElementById("bg-music");
+const musicBtn = document.getElementById("music-btn");
 
-  musicBtn.addEventListener("click", () => {
-    if (music.paused) {
-      music.play();
-      musicBtn.textContent = "🔇 Oprește Muzica";
-    } else {
-      music.pause();
-      musicBtn.textContent = "🔊 Play Muzică";
-    }
-  });
-
+musicBtn.addEventListener("click", () => {
+  if (music.paused) {
+    music.play();
+    musicBtn.textContent = "🔇 Oprește Muzica";
+  } else {
+    music.pause();
+    musicBtn.textContent = "🔊 Play Muzică";
+  }
+});
 </script>
 </body>
 </html>
-
-
 
 
 
