--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@ setInterval(createHeart, 500);
 
 // Mesaje care apar pe rând
 const messages = [
-  "Îți aduci aminte când am mers prima dată la mare împreună? 🌊",
   "Îmi place cum râzi și cum îmi luminezi zilele 😍",
   "Buburuza mea, fiecare zi cu tine e magică ✨",
-  "Abia aștept să sărbătorim astăzi împreună ❤️"
+  "Abia aștept să sărbătorim astăzi împreună ❤️",
+  "Ești tot ce mi-am dorit vreodată, Cosmina 💖"
 ];
 const msgContainer = document.getElementById("messages-container");
 let msgIndex = 0;
@@ -356,6 +356,7 @@ musicBtn.addEventListener("click", () => {
 </script>
 </body>
 </html>
+
 
 
 
